--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
     "mongodb": "^4.2.1",
     "multer": "^1.4.4",
