--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
@@ -21,6 +22,7 @@
     "express-session": "^1.17.2",
     "mongodb": "^4.2.1",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "stripe": "^8.202.0",
     "uuid": "^8.3.2"
   },
